--- a/global-config.properties
+++ b/global-config.properties
@@ -1,12 +1,26 @@
-#kubernetes版本
-VERSION=v1.14.0
+#kubernetes版本（通过kubeadm version查看）
+VERSION=v1.16.3
 
-#POD网段
-POD_CIDR=172.22.0.0/16
+#POD网段(kubernetes服务ip网段)
+POD_CIDR=192.172.0.0/16
 
-#master虚拟ip
-MASTER_VIP=192.168.8.188
+#master（api-server）虚拟ip
+MASTER_VIP=192.168.41.130
+
+#3台maseter节点ip
+MASTER_0_IP=192.168.40.134
+MASTER_1_IP=192.168.40.135
+MASTER_2_IP=192.168.40.136
+
+#3台maseter节点的hostname:
+MASTER_0_HOSTNAME=k8s1
+MASTER_1_HOSTNAME=k8s2
+MASTER_2_HOSTNAME=k8s3
+
 
 #keepalived用到的网卡接口名
 VIP_IF=ens33
+
+#worker节点列表
+#WORKER_IPS=192.168.40.137,192.168.40.138
 
